# MHW-ClassPropDump

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  process_dump.py
old_frida/: README.md  dump_dti.py  parse_dti_dump.py  steam_appid.txt
scripts/: process_dump.py
scripts/dump_processor/: __init__.py  cleaner.py  game_profiles.py  processor.py  psuedo_exporter.py
scripts/profiles/: MHW.json
src/: DTIDumper.cpp  DTIDumper.hpp  Mt.cpp  Mt.hpp  SigScan.cpp  SigScan.hpp  config.h.in  crc.c  crc.h  dumper.cpp  dumper.h  log.cpp  log.h  main.cpp  safe_thread_calls.cpp  safe_thread_calls.h  sig_scan.cpp  sig_scan.h  size_assert.h  size_assert.hpp  win_utils.cpp  win_utils.h
src/MT/: MtCommon.hpp  MtDTI.cpp  MtDTI.hpp  MtDTIHashTable.hpp  MtObject.hpp  MtProperty.cppx  MtProperty.hpp  MtPropertyList.hpp  mt.cpp  mt.h  mt_dti.cpp  mt_dti.h  mt_dti_hash_table.h  mt_object.h  mt_property_list.h
src/MT/game/: DDDA.h  DDON.h  MHS2.h  MHW.h  UMVC3.cpp  UMVC3.h
